--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5uOkfVKj+aV6lpatVjxVG",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMCSkD4fWjfPN/VFYF72PTI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +49,97 @@
             "[1 2 3]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LG6ScT24j1Gq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "1a581438-a121-4499-b64e-7e7c6aee9d44"
+      },
+      "source": [
+        "import numpy as np\n",
+        "a=np.array([[1,2],[7,8]])\n",
+        "print(a)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1 2]\n",
+            " [7 8]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DikqdXgpnSZa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        },
+        "outputId": "877a5f86-a468-4e32-8a3e-f83d9a20ed29"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np.arange( 10, 30, 5)\n"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 15, 20, 25])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IReu6YClpVlS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "outputId": "c5824fde-a8f0-4afd-c2b8-323b940109c7"
+      },
+      "source": [
+        "np.zeros( (3,4) )"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
     }
