--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMCSkD4fWjfPN/VFYF72PTI",
+      "authorship_tag": "ABX9TyOn5g+BU610Yj8RkZMY1V9b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,6 +139,37 @@
             "tags": []
           },
           "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G5B9H8s4q3Zd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "d0f98840-2c19-4112-9de8-6dd47ac1fa5f"
+      },
+      "source": [
+        "np.ones ( (2,3), dtype=np.int16 )"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 1, 1],\n",
+              "       [1, 1, 1]], dtype=int16)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
         }
       ]
     }
